[project]
name = "mintguard"
version = "0.1.0"
description = "Idempotent payments mini-backend with double-entry ledger"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "sqlalchemy>=2.0.30",
  "psycopg[binary,pool]>=3.1.19",
  "python-dotenv>=1.0.1",
  "prometheus-client>=0.20.0",   # <-- add this line INSIDE the list
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
